=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Added: New drag and drop Media Sort Function for Lightbox and Media Tabs (windmillway)
 - Fixed: [ 1970563 ] SVN 3115 _CHR_CHIL appears as gedcom error (fisharebest)
 - Changed: Lightbox: - Fixed Firefox dragNdrop erroneous initial displacement when in zoom mode (windmillway)
 - Fixed: [ 1940401 ] GEDCOM changes notification  (fisharebest)
 - Fixed: [ 1764343 ] login after login (fisharebest)
 - Fixed: [ 1774725 ] problem in login in site with several Gedcoms (fisharebest)
 - Changed: Lightbox: - Preparation for the Media sort feature (Which I hope to have out soon) (windmillway)
 - Changed: Lightbox: - Fix suppression of FF browser tooltip, personal Facts tooltip info etc (windmillway)  
 - Added: Google Maps - use google geocode engine (wooc)
 - Fixed: [ 1966611 ] 4.1.5 - Edit Geographic Place Location - escapes, flag (wooc)
 - Fixed: [ 1965647 ] Starred Given Names in Charts including compact chart. (windmillway)
 - Changed: Added $GEDCOM global missed out in SVN 3050 (windmillway)
 - Fixed: RSS feeds/random media bug.  RSS duplicate include files.  (fisharebest)
 - Changed: Show persons name as Lightbox title (instead of file) name when viewing various Charts (windmillway)
 - Fixed: [ 1961705 ] Pedigree chart in portrait despite pref setting (canajun2eh)
 - Fixed: [ 1961288 ] [4.1.5] indi page tab script error if lightbox module not installed (windmillway)
 - Fixed: [ 1953273 ] [4.1.5] Research Assistant code parse errors (andrew_scss)
 - Added: Built-in generation of Google Analytics tracking code (fisharebest)
 - Added: Allow _BRTM and other events as substitutes for BIRT/MARR/DIV/DEAT
 - Fixed: [ 1953881 ] 4.1.5rel ... FAm events not showing in Personal facts tab (fisharebest)